# ChangeLog for sys-kernel/linux-firmware
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux-firmware/ChangeLog,v 1.33 2012/02/21 21:41:45 chithanh Exp $

*linux-firmware-20120219 (21 Feb 2012)

  21 Feb 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +linux-firmware-20120219.ebuild:
  New snapshot.

*linux-firmware-20120125 (03 Feb 2012)

  03 Feb 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  linux-firmware-20110731.ebuild, linux-firmware-20110818.ebuild,
  +linux-firmware-20120125.ebuild, linux-firmware-99999999.ebuild:
  New snapshot. Update download locations. Avoid installing empty directories,
  bug #396073.

  02 Feb 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  linux-firmware-99999999.ebuild:
  Update location of upstream repository.

  01 Nov 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  -linux-firmware-20110604.ebuild, -linux-firmware-20110709.ebuild,
  linux-firmware-20110731.ebuild, linux-firmware-20110818.ebuild,
  linux-firmware-99999999.ebuild:
  Add net-wireless/ar9271-firmware to blockers, remove old.

  28 Aug 2011; Markus Meier <maekke@gentoo.org> linux-firmware-20110731.ebuild:
  arm stable, bug #379997

  24 Aug 2011; Markus Meier <maekke@gentoo.org> linux-firmware-20110731.ebuild:
  x86 stable, bug #379997

  24 Aug 2011; Tony Vroon <chainsaw@gentoo.org> linux-firmware-20110731.ebuild:
  Marked stable on AMD64 based on arch testing by Ian "idella4" Delaney in bug
  #379997 filed by Chí-Thanh Christopher Nguyễn.

  23 Aug 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  linux-firmware-20110731.ebuild, linux-firmware-20110818.ebuild,
  linux-firmware-99999999.ebuild:
  Add iwl6030-ucode to blockers.

*linux-firmware-20110818 (20 Aug 2011)

  20 Aug 2011; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  linux-firmware-20110604.ebuild, linux-firmware-20110709.ebuild,