@@ -1,11 +1,21 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST linux-firmware-20110731.tar.bz2 15251521 RMD160 18be95d4e230726c02764d6ee5b12dc546c72922 SHA1 57df268331586c10531ec2249b85ccedd114e98b SHA256 f7e122642b99727db63ec6cf2fb64037e7e49a2e5db59a62cdba444a273905d3
 DIST linux-firmware-20110818.tar.bz2 16023823 RMD160 ff8f4f7fbfc3f9608d44d72bbc5f544f562e1a2d SHA1 4279c2937f7fc834441a3e78e286e6688c873c99 SHA256 4cf4ac66e2b3cff7550857ec7fa52d9d274c0000b2486b701d16f6e9cc57795d
 DIST linux-firmware-20120125.tar.gz 22407395 RMD160 930b8efa5ad05b93fbe79ade2c4e894ed819344b SHA1 84dadf2ab0ca26cb603da850ce0a113129f98a5a SHA256 be15aefa80668288fc1202f32f4be06fcc751eed5cceeaaeb65b6de1c71761aa
 DIST linux-firmware-20120219.tar.gz 23579430 RMD160 77a3b07c8873812c79607631956545e40f0843ae SHA1 7deb392f34617b9f4bc1bf1c23b38a16396b7da9 SHA256 cbcb30f6c42bb5dd64b1835dc1054fffb27126b7be4385f1d65b4f46529c88f4
-EBUILD linux-firmware-20110731.ebuild 2495 RMD160 f1e66ee401ae68c5fa330bd64de78122a11f72e2 SHA1 c98665c0d8a87508ae11ed9ad7fd9d8315f6a8af SHA256 23ea2524aef8e9df7f6c83a393ffdb4a1110eac328d19a8f978da8a312ad6985
-EBUILD linux-firmware-20110818.ebuild 2498 RMD160 740465e4e94ffdae4c876e92fec18f2054134abc SHA1 0843986c4ed2c6d0b0103e9c22eb534c55802d99 SHA256 0e5395052a65b2b567b3b0045b4e241f70a019b45356addaeb9e49524adfa78f
-EBUILD linux-firmware-20120125.ebuild 2728 RMD160 36a0fd96ce55cce53de739766e8f55455ef56284 SHA1 a6e7386f34b6dc339eb47b3bcb1dfab192be983a SHA256 a36da346a44d4e7c2ac84f0e3b09a5854c9ad6245d3742381cd427f98f3f5487
-EBUILD linux-firmware-20120219.ebuild 2728 RMD160 7a8a65acf7b21717424eab394e8647109c287b1b SHA1 5e31e58804e12d329659cd441f2092261e31db48 SHA256 8d2106d8a2305b1ae40c1bf4cc40e1b4dec766400845b7d4f5d366401f43281e
-EBUILD linux-firmware-99999999.ebuild 2713 RMD160 2080d3e3be6e23d86732bc0aef0d9587388a24be SHA1 57aaa745f55059a2a3fe13b746b7895a630f6278 SHA256 a99850eb579a1bc0924bbfc8a8c2a361d38c610fb8a481ed2e58df75ecca8f2e
-MISC ChangeLog 6227 RMD160 e4dd9d94cd572367a804637a8a68375de82a6d03 SHA1 8869d02240aef4f7311dffb679a2b57ca343f432 SHA256 97fba0d7d368501b1466f34c77e0b9a1d846f1d5de8af9cb58fb2263e1e6c838
+EBUILD linux-firmware-20110731.ebuild 2560 RMD160 cf20424fff36d90dc1e1403773a1ad3dabda1841 SHA1 9346f8209bf6e533a378fdf386b047f047d7a69e SHA256 799f8b8457951a94f1ca416d355c64ec6fc2c037e233a98e79aa6bad3d004aa1
+EBUILD linux-firmware-20110818.ebuild 2563 RMD160 35d896d6227459b267327800eca235e33c227f2e SHA1 a25afd19b6336eec16c522c09e723e9005d0ba90 SHA256 21bb44c0b84392cdc96bfb0d0bbb43256cd2ba419b7eb404ff751c4c7736bb00
+EBUILD linux-firmware-20120125.ebuild 2793 RMD160 1b3342077094f6018b4083c2a9fd31b72cfa09f5 SHA1 5d7445842e8afe6c665c66fbfad683341431d9ca SHA256 a7917df1f3818b1fe8b3b0cd59a8736f26a3e207ab0325dea458da40974f6574
+EBUILD linux-firmware-20120219.ebuild 2793 RMD160 26ea48b1e19a432b378a776e7bb4f3897e180363 SHA1 24a886aa7295de689cad2f047a290637fcaf310e SHA256 e92c3e7e71ca1aed26ed20c89b83ab3a5c59647cea99213f6206d06f64aba1b4
+EBUILD linux-firmware-99999999.ebuild 2778 RMD160 b2b3b19c1a2495b5521a3b7d2c5a6596c669a55a SHA1 e7e868e734fd13f6b2e534cd8cd222828753f17b SHA256 ab0748a07ad7119db0cab480de2d2bb34566a73418a0d046c9a501ad3f35f703
+MISC ChangeLog 6572 RMD160 96ac61e02403d2872ed96cc85953a940cfe4ccbf SHA1 68128b68b7aa4e3a3f83a4601eb970bb50a2050c SHA256 4794dda7abd3b62ee054faad69497a08883869401d651701bf57a2caebc5edee
 MISC metadata.xml 454 RMD160 486442b015182f3a69ac3420ee1fa8af56ca3938 SHA1 c9bbe5d0d641c8545d6f93be32e0fbb4751bc49e SHA256 981ce29c1ab948ee695b585601283674cb5079e054457829d9da06620e199f14
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iF4EAREIAAYFAk9OYkkACgkQdjK8w9WeBnCUHAEAtuo1Tg5l372J+T058p0+29l+
+e5qqLkoXkinmzpYdhCEA/3n8bZpGO7WS2Vh3GmdGVAJ1LBoeWRf8imgwr5QYBlXT
+=b2gR
+-----END PGP SIGNATURE-----
